# dist/swagger.json
@@ -108,6 +108,32 @@
 				"security": [],
 				"parameters": []
 			}
+		},
+		"/auth/Auth5": {
+			"get": {
+				"operationId": "AnotherFunction",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"type": "number",
+										"format": "double"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": []
+			}
 		}
 	},
 	"servers": [
